2013-06-05  Corinna Vinschen  <corinna@vinschen.de>

	* faq-programming.xml: Convert url to refer to new flat faq.html file.
	* faq-setup.xml: Ditto.
	* faq-using.xml: Ditto.
	* highlights.xml: Ditto.

2013-06-05  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.19): Revert mandatory locking support to
	"preliminary".

2013-06-04  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in: Add rule to rebuild Makefile if Makefile.in changes.
	Include Makefile.dep last.
	(Makefile.dep): Run xidepend within source dir.  Temporarily drop
	faq.xml from dependencies.
	* xidepend: Fix creating base filename to accommodate VPATH.

2013-06-04  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.19): Align mandatory locking text to
	today's changes.

2013-06-03  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.19): Add mandatory locking.

2013-05-23  Warren Young  <warren@etr-usa.com>

	* xidepend: New script, generates Makefile.dep from top-level XML
	* .cvsignore: Ignoring Makefile.dep output
	* Makefile: Creating Makefile.dep if it doesn't exist, including it
	if it does, and removing it on 'make clean'
	* Wishlist: Knocked autodependency generation off the list

2013-05-23  Corinna Vinschen  <corinna@vinschen.de>

	* cygwinenv.xml (cygwinenv-implemented-options): Explain new
	winsymliks:nativestrict option.  Strip out description of symlink types
	and refer to new pathnames-symlinks section.
	* highlights.xml (ov-hi-files): Rip out most of symlink description and
	refer to new pathnames-symlinks section instead.
	* new-features.xml (ov-new1.7.19): Add CYGWIN=winsymlinks:nativestrict.
	* pathnames.xml (pathnames-symlinks): New section describing symbolic
	link handling.

2013-05-21  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.19): Add arc4random,
	arc4random_addrandom, arc4random_buf, arc4random_stir and
	arc4random_uniform.

2013-05-21  Corinna Vinschen  <corinna@vinschen.de>
