@@ -10,7 +10,7 @@
     <question><para>What are the copyrights?</para></question>
 
     <answer>
-      <para>Please see <ulink url="http://cygwin.com/license.html"/>
+      <para>Please see <ulink url="http://cygwin.com/licensing.html"/>
       for more information about Cygwin copyright and licensing.</para>
     </answer>
   </qandaentry>
